# marketplace-app

./: .gitignore  package-lock.json
backend/: .gitignore  Gemfile  README_DEV.md
backend/app/controllers/: products_controller.rb
backend/app/controllers/api/: products_controller.rb  step_files_controller.rb  step_jobs_controller.rb
backend/app/models/: step_job.rb
backend/config/: credentials.yml.enc  routes.rb
backend/config/initializers/: cors.rb
backend/db/: schema.rb
backend/db/migrate/: 20250609_create_products.rb  20250814184436_create_step_jobs.rb
backend/test/controllers/api/: step_files_controller_test.rb
cpp_occ/: .gitignore  CMakeLists.txt  test_occ.cpp
frontend/: .gitignore  README_DEV.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: CartPage.vue  HeaderBar.vue  HomePage.vue  MaterialGuide.vue  MaterialList.vue
frontend/src/components/icons/: IconCart.vue  IconMill.vue  IconProfile.vue  index.js
frontend/src/router/: index.js
frontend/src/stores/: cart.js  materials.js
step_processing/: .gitignore  CMakeLists.txt  step_render_views.py  step_surface_area.cpp  step_volume.cpp
